Fix search container margin causing unintentional element overlap (#1153)

--- a/source/_static/css/custom.css
+++ b/source/_static/css/custom.css
@@ -91,11 +91,6 @@ html[data-theme="dark"] .highlight .gd {
   vertical-align: middle;
 }
 
-.bd-search {
-  margin-top: -2rem;
-  margin-bottom: -1rem;
-}
-
 .navbar-nav li.toctree-l1 {
   margin-top: 1rem;
   margin-bottom: 0.5rem;
